# bitgen-1

./: CHANGELOG.txt  Makefile  Makefile.windows  PROJECT.txt  README.md  USING_SPLIT_WALLETS.txt  VERIFY_SOFTWARE.txt  bitgen_public.gpg  generateCMake.cpp  generateMakeFile.cpp
src/: CMakeLists.txt  CommandlineParser.cpp  CommandlineParser.h  ElectrumCommandline.cpp  ElectrumCommandline.h  EntityInformationCommandline.cpp  EntityInformationCommandline.h  ExtendedAddressCommandline.cpp  ExtendedAddressCommandline.h  ExtendedKey.cpp  ExtraOptionsRandom.cpp  ExtraOptionsRandom.h  GenerationMethods.cpp  GenerationMethods.h  GenerationMethodsElectrum.cpp  GenerationMethodsElectrum.h  GenerationMethodsExtended.cpp  GenerationMethodsExtended.h  GenerationParameters.cpp  GenerationParameters.h  HierarchialRandom.cpp  MiscCommandline.cpp  MiscCommandline.h  MnemonicCommandline.cpp  MnemonicCommandline.h  RootGenerationCommandline.cpp  RootGenerationCommandline.h  SaveFolderHandler.cpp  SaveFolderHandler.h  SignatureImpl.cpp  SignatureImpl.h  StaticXor.cpp  StaticXor.h  TransactionCommandline.cpp  TransactionCommandline.h  bitcalc.cpp  bitcalccli.cpp  bitcry.cpp  bitgenConfig.cpp  bitgenConfig.h  (+21 more)
src/bitgen/: mnemonic.cpp  mnemonic.h  postscriptGeneration.cpp  printPS.cpp  printPS.h  random.cpp  random.h  txtGeneration.cpp  txtGeneration.h
src/bitlib/: BinaryScript.h  ECPoint.cpp  ECPoint.h  FileUtil.cpp  FileUtil.h  RSVal.cpp  Script.cpp  Script.h  Timestamp.cpp  Timestamp.h  amount.cpp  amount.h  binaryTransaction.h  bitlibVersion.h  cashAddress.cpp  cashAddress.h  cryptoDecoder.cpp  cryptoDecoder.h  currencySpecific.cpp  currencySpecific.h  currencySpecific_bitcoincash_slp_specific.cpp  fiveBitItems.cpp  fiveBitItems.h  pubAddress.cpp  pubAddress.h  pubKey.cpp  pubKey.h  readStream.h  scriptdecoder.cpp  signature.cpp  signature.h  transaction.cpp  transaction.h  transactionSignatureChecker.cpp  transactiondecoder.cpp  transactiondecoder.h  txHash.cpp  txHash.h  util.cpp  util.h
src/test/: signatureTest.cpp  unittest.cpp  unittest.h  unittestBTC.cpp  unittestBTC.h
src/vanity/: VanityCommandline.cpp  VanityCommandline.h  VanitySearcher.cpp  bitgenvanity.cpp  bitgenvanity.h
test/: autotest.py  testaddress-bch.py  testaddress-btc.py  testaddress-doge.py  testaddress-ltc.py  testaddress-nmc.py  testaddress-ppc.py  testaddress-vtc.py  testelectrum-bch.py  testelectrum-btc.py  testelectrum-ltc.py  testelectrum-vtc.py  testmnemonic-btc.py  testotp-bch.py  testotp-btc.py  testotp-doge.py  testotp-ftc.py  testotp-ltc.py  testotp-ppc.py  testotp-vtc.py  testsignature-bch.py  testtransauto-btc.py  testtransauto-doge.py  testtransauto-ftc.py  testtransauto-ltc.py  testtransauto-nmc.py  testtransauto-vtc.py
test/testfiles/: bch_6401CA84B4CC30820DC29F74A5EDD7FEEEFBCD5EBBB1DEDA18526AA97197807C.trans  bch_8CF0BD490F2CF39959FCEF72411BDF52E8791A4779F0B96279BF3C9651295CDF.trans  bch_97971462B124020B63FF2BFA5A9A1B4BE901AD6F6AFF7703E7E0B3E73AC93665.trans  bch_BD41BF8AF5189613EDF489DB2620202BC64E337FDEB8661DF2D90F26B3A868D8.trans  bch_EA65A0EB6EF7A4E775DFBCE7226C884DDD023E23E2F9101656764CDE0435AC6E.trans
